new: SvgIcon component,Breeds component, Breeds blocks component, Layout component, DashboardRoutes component, MainRoutes component, cat saga, cat slice, store, store types; add: api urls, cat api services, useAppDispatch hook, useAppSelector hook;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,17 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "preserve",
+    "baseUrl": "./src",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@pages/*": ["pages/*"],
+      "@core/*": ["core/*"],
+      "@assets/*": ["assets/*"],
+      "@tests/*": ["__tests__/*"],
+      "@skeletons/*": ["skeletons/*"],
+      "@routes/*": ["routes/*"],
+    }
   },
   "include": [
     "src"
