--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "classnames": "^2.3.2",
+        "html-react-parser": "^3.0.9",
         "react": "^18.2.0",
+        "react-content-loader": "^6.2.1",
         "react-dom": "^18.2.0",
+        "react-intersection-observer": "^9.4.3",
         "react-redux": "^8.0.4",
         "react-router": "^6.4.2",
         "react-router-dom": "^6.4.2",
